--- a/Docs/api/DataLayer.EquatorialObjects.EquatorialMessierObject.yml
+++ b/Docs/api/DataLayer.EquatorialObjects.EquatorialMessierObject.yml
@@ -5,6 +5,7 @@ items:
   id: EquatorialMessierObject
   parent: DataLayer.EquatorialObjects
   children:
+  - DataLayer.EquatorialObjects.EquatorialMessierObject.CommonName
   - DataLayer.EquatorialObjects.EquatorialMessierObject.Constellation
   - DataLayer.EquatorialObjects.EquatorialMessierObject.MessierId
   - DataLayer.EquatorialObjects.EquatorialMessierObject.NewGeneralCatalog
@@ -21,21 +22,12 @@ items:
   type: Class
   source:
     remote:
-<<<<<<< HEAD
-      path: DataLayer/EquatorialObjects/EquitorialMessierObject.cs
+      path: DataLayer/EquatorialObjects/EquatorialMessierObject.cs
       branch: fix-messier-visibility
       repo: https://github.com/CS-499-Group-9/Stargazer
     id: EquatorialMessierObject
-    path: ../DataLayer/EquatorialObjects/EquitorialMessierObject.cs
-    startLine: 8
-=======
-      path: DataLayer/EquatorialObjects/EquatorialMessierObject.cs
-      branch: state-machines
-      repo: https://github.com/CS-499-Group-9/Stargazer
-    id: EquatorialMessierObject
     path: ../DataLayer/EquatorialObjects/EquatorialMessierObject.cs
-    startLine: 6
->>>>>>> main
+    startLine: 8
   assemblies:
   - DataLayer
   namespace: DataLayer.EquatorialObjects
@@ -78,21 +70,12 @@ items:
   type: Property
   source:
     remote:
-<<<<<<< HEAD
-      path: DataLayer/EquatorialObjects/EquitorialMessierObject.cs
+      path: DataLayer/EquatorialObjects/EquatorialMessierObject.cs
       branch: fix-messier-visibility
       repo: https://github.com/CS-499-Group-9/Stargazer
     id: MessierId
-    path: ../DataLayer/EquatorialObjects/EquitorialMessierObject.cs
-    startLine: 14
-=======
-      path: DataLayer/EquatorialObjects/EquatorialMessierObject.cs
-      branch: state-machines
-      repo: https://github.com/CS-499-Group-9/Stargazer
-    id: MessierId
     path: ../DataLayer/EquatorialObjects/EquatorialMessierObject.cs
-    startLine: 12
->>>>>>> main
+    startLine: 14
   assemblies:
   - DataLayer
   namespace: DataLayer.EquatorialObjects
@@ -118,21 +101,12 @@ items:
   type: Property
   source:
     remote:
-<<<<<<< HEAD
-      path: DataLayer/EquatorialObjects/EquitorialMessierObject.cs
+      path: DataLayer/EquatorialObjects/EquatorialMessierObject.cs
       branch: fix-messier-visibility
       repo: https://github.com/CS-499-Group-9/Stargazer
     id: NewGeneralCatalog
-    path: ../DataLayer/EquatorialObjects/EquitorialMessierObject.cs
-    startLine: 18
-=======
-      path: DataLayer/EquatorialObjects/EquatorialMessierObject.cs
-      branch: state-machines
-      repo: https://github.com/CS-499-Group-9/Stargazer
-    id: NewGeneralCatalog
     path: ../DataLayer/EquatorialObjects/EquatorialMessierObject.cs
-    startLine: 16
->>>>>>> main
+    startLine: 18
   assemblies:
   - DataLayer
   namespace: DataLayer.EquatorialObjects
@@ -158,21 +132,12 @@ items:
   type: Property
   source:
     remote:
-<<<<<<< HEAD
-      path: DataLayer/EquatorialObjects/EquitorialMessierObject.cs
+      path: DataLayer/EquatorialObjects/EquatorialMessierObject.cs
       branch: fix-messier-visibility
       repo: https://github.com/CS-499-Group-9/Stargazer
     id: Type
-    path: ../DataLayer/EquatorialObjects/EquitorialMessierObject.cs
-    startLine: 22
-=======
-      path: DataLayer/EquatorialObjects/EquatorialMessierObject.cs
-      branch: state-machines
-      repo: https://github.com/CS-499-Group-9/Stargazer
-    id: Type
     path: ../DataLayer/EquatorialObjects/EquatorialMessierObject.cs
-    startLine: 20
->>>>>>> main
+    startLine: 22
   assemblies:
   - DataLayer
   namespace: DataLayer.EquatorialObjects
@@ -198,21 +163,12 @@ items:
   type: Property
   source:
     remote:
-<<<<<<< HEAD
-      path: DataLayer/EquatorialObjects/EquitorialMessierObject.cs
+      path: DataLayer/EquatorialObjects/EquatorialMessierObject.cs
       branch: fix-messier-visibility
       repo: https://github.com/CS-499-Group-9/Stargazer
     id: Constellation
-    path: ../DataLayer/EquatorialObjects/EquitorialMessierObject.cs
-    startLine: 26
-=======
-      path: DataLayer/EquatorialObjects/EquatorialMessierObject.cs
-      branch: state-machines
-      repo: https://github.com/CS-499-Group-9/Stargazer
-    id: Constellation
     path: ../DataLayer/EquatorialObjects/EquatorialMessierObject.cs
-    startLine: 24
->>>>>>> main
+    startLine: 26
   assemblies:
   - DataLayer
   namespace: DataLayer.EquatorialObjects
@@ -238,21 +194,12 @@ items:
   type: Property
   source:
     remote:
-<<<<<<< HEAD
-      path: DataLayer/EquatorialObjects/EquitorialMessierObject.cs
+      path: DataLayer/EquatorialObjects/EquatorialMessierObject.cs
       branch: fix-messier-visibility
       repo: https://github.com/CS-499-Group-9/Stargazer
     id: Size
-    path: ../DataLayer/EquatorialObjects/EquitorialMessierObject.cs
-    startLine: 30
-=======
-      path: DataLayer/EquatorialObjects/EquatorialMessierObject.cs
-      branch: state-machines
-      repo: https://github.com/CS-499-Group-9/Stargazer
-    id: Size
     path: ../DataLayer/EquatorialObjects/EquatorialMessierObject.cs
-    startLine: 28
->>>>>>> main
+    startLine: 30
   assemblies:
   - DataLayer
   namespace: DataLayer.EquatorialObjects
@@ -278,21 +225,12 @@ items:
   type: Property
   source:
     remote:
-<<<<<<< HEAD
-      path: DataLayer/EquatorialObjects/EquitorialMessierObject.cs
+      path: DataLayer/EquatorialObjects/EquatorialMessierObject.cs
       branch: fix-messier-visibility
       repo: https://github.com/CS-499-Group-9/Stargazer
     id: ViewingSeason
-    path: ../DataLayer/EquatorialObjects/EquitorialMessierObject.cs
-    startLine: 34
-=======
-      path: DataLayer/EquatorialObjects/EquatorialMessierObject.cs
-      branch: state-machines
-      repo: https://github.com/CS-499-Group-9/Stargazer
-    id: ViewingSeason
     path: ../DataLayer/EquatorialObjects/EquatorialMessierObject.cs
-    startLine: 32
->>>>>>> main
+    startLine: 34
   assemblies:
   - DataLayer
   namespace: DataLayer.EquatorialObjects
@@ -318,21 +256,12 @@ items:
   type: Property
   source:
     remote:
-<<<<<<< HEAD
-      path: DataLayer/EquatorialObjects/EquitorialMessierObject.cs
+      path: DataLayer/EquatorialObjects/EquatorialMessierObject.cs
       branch: fix-messier-visibility
       repo: https://github.com/CS-499-Group-9/Stargazer
     id: ViewingDifficulty
-    path: ../DataLayer/EquatorialObjects/EquitorialMessierObject.cs
-    startLine: 38
-=======
-      path: DataLayer/EquatorialObjects/EquatorialMessierObject.cs
-      branch: state-machines
-      repo: https://github.com/CS-499-Group-9/Stargazer
-    id: ViewingDifficulty
     path: ../DataLayer/EquatorialObjects/EquatorialMessierObject.cs
-    startLine: 36
->>>>>>> main
+    startLine: 38
   assemblies:
   - DataLayer
   namespace: DataLayer.EquatorialObjects
@@ -345,6 +274,37 @@ items:
       type: System.String
     content.vb: Public Property ViewingDifficulty As String
   overload: DataLayer.EquatorialObjects.EquatorialMessierObject.ViewingDifficulty*
+- uid: DataLayer.EquatorialObjects.EquatorialMessierObject.CommonName
+  commentId: P:DataLayer.EquatorialObjects.EquatorialMessierObject.CommonName
+  id: CommonName
+  parent: DataLayer.EquatorialObjects.EquatorialMessierObject
+  langs:
+  - csharp
+  - vb
+  name: CommonName
+  nameWithType: EquatorialMessierObject.CommonName
+  fullName: DataLayer.EquatorialObjects.EquatorialMessierObject.CommonName
+  type: Property
+  source:
+    remote:
+      path: DataLayer/EquatorialObjects/EquatorialMessierObject.cs
+      branch: fix-messier-visibility
+      repo: https://github.com/CS-499-Group-9/Stargazer
+    id: CommonName
+    path: ../DataLayer/EquatorialObjects/EquatorialMessierObject.cs
+    startLine: 42
+  assemblies:
+  - DataLayer
+  namespace: DataLayer.EquatorialObjects
+  summary: The commonly used main of the object
+  example: []
+  syntax:
+    content: public string? CommonName { get; set; }
+    parameters: []
+    return:
+      type: System.String
+    content.vb: Public Property CommonName As String
+  overload: DataLayer.EquatorialObjects.EquatorialMessierObject.CommonName*
 references:
 - uid: DataLayer.EquatorialObjects
   commentId: N:DataLayer.EquatorialObjects
@@ -700,3 +660,9 @@ references:
   name: ViewingDifficulty
   nameWithType: EquatorialMessierObject.ViewingDifficulty
   fullName: DataLayer.EquatorialObjects.EquatorialMessierObject.ViewingDifficulty
+- uid: DataLayer.EquatorialObjects.EquatorialMessierObject.CommonName*
+  commentId: Overload:DataLayer.EquatorialObjects.EquatorialMessierObject.CommonName
+  href: DataLayer.EquatorialObjects.EquatorialMessierObject.html#DataLayer_EquatorialObjects_EquatorialMessierObject_CommonName
+  name: CommonName
+  nameWithType: EquatorialMessierObject.CommonName
+  fullName: DataLayer.EquatorialObjects.EquatorialMessierObject.CommonName
