--- a/Docs/api/DataLayer.HorizontalObjects.HorizontalMessierObject.yml
+++ b/Docs/api/DataLayer.HorizontalObjects.HorizontalMessierObject.yml
@@ -6,6 +6,7 @@ items:
   parent: DataLayer.HorizontalObjects
   children:
   - DataLayer.HorizontalObjects.HorizontalMessierObject.#ctor(DataLayer.EquatorialObjects.EquatorialMessierObject)
+  - DataLayer.HorizontalObjects.HorizontalMessierObject.CommonName
   - DataLayer.HorizontalObjects.HorizontalMessierObject.Constellation
   - DataLayer.HorizontalObjects.HorizontalMessierObject.MessierId
   - DataLayer.HorizontalObjects.HorizontalMessierObject.NewGeneralCatalog
@@ -110,7 +111,7 @@ items:
       repo: https://github.com/CS-499-Group-9/Stargazer
     id: MessierId
     path: ../DataLayer/HorizontalObjects/HorizontalMessierObject.cs
-    startLine: 30
+    startLine: 32
   assemblies:
   - DataLayer
   namespace: DataLayer.HorizontalObjects
@@ -141,7 +142,7 @@ items:
       repo: https://github.com/CS-499-Group-9/Stargazer
     id: NewGeneralCatalog
     path: ../DataLayer/HorizontalObjects/HorizontalMessierObject.cs
-    startLine: 34
+    startLine: 36
   assemblies:
   - DataLayer
   namespace: DataLayer.HorizontalObjects
@@ -172,7 +173,7 @@ items:
       repo: https://github.com/CS-499-Group-9/Stargazer
     id: Type
     path: ../DataLayer/HorizontalObjects/HorizontalMessierObject.cs
-    startLine: 38
+    startLine: 40
   assemblies:
   - DataLayer
   namespace: DataLayer.HorizontalObjects
@@ -203,7 +204,7 @@ items:
       repo: https://github.com/CS-499-Group-9/Stargazer
     id: Constellation
     path: ../DataLayer/HorizontalObjects/HorizontalMessierObject.cs
-    startLine: 42
+    startLine: 44
   assemblies:
   - DataLayer
   namespace: DataLayer.HorizontalObjects
@@ -234,7 +235,7 @@ items:
       repo: https://github.com/CS-499-Group-9/Stargazer
     id: Size
     path: ../DataLayer/HorizontalObjects/HorizontalMessierObject.cs
-    startLine: 46
+    startLine: 48
   assemblies:
   - DataLayer
   namespace: DataLayer.HorizontalObjects
@@ -265,7 +266,7 @@ items:
       repo: https://github.com/CS-499-Group-9/Stargazer
     id: ViewingSeason
     path: ../DataLayer/HorizontalObjects/HorizontalMessierObject.cs
-    startLine: 50
+    startLine: 52
   assemblies:
   - DataLayer
   namespace: DataLayer.HorizontalObjects
@@ -296,7 +297,7 @@ items:
       repo: https://github.com/CS-499-Group-9/Stargazer
     id: ViewingDifficulty
     path: ../DataLayer/HorizontalObjects/HorizontalMessierObject.cs
-    startLine: 54
+    startLine: 56
   assemblies:
   - DataLayer
   namespace: DataLayer.HorizontalObjects
@@ -309,6 +310,37 @@ items:
       type: System.String
     content.vb: Public Property ViewingDifficulty As String
   overload: DataLayer.HorizontalObjects.HorizontalMessierObject.ViewingDifficulty*
+- uid: DataLayer.HorizontalObjects.HorizontalMessierObject.CommonName
+  commentId: P:DataLayer.HorizontalObjects.HorizontalMessierObject.CommonName
+  id: CommonName
+  parent: DataLayer.HorizontalObjects.HorizontalMessierObject
+  langs:
+  - csharp
+  - vb
+  name: CommonName
+  nameWithType: HorizontalMessierObject.CommonName
+  fullName: DataLayer.HorizontalObjects.HorizontalMessierObject.CommonName
+  type: Property
+  source:
+    remote:
+      path: DataLayer/HorizontalObjects/HorizontalMessierObject.cs
+      branch: fix-messier-visibility
+      repo: https://github.com/CS-499-Group-9/Stargazer
+    id: CommonName
+    path: ../DataLayer/HorizontalObjects/HorizontalMessierObject.cs
+    startLine: 60
+  assemblies:
+  - DataLayer
+  namespace: DataLayer.HorizontalObjects
+  summary: <xref href="DataLayer.EquatorialObjects.EquatorialMessierObject.CommonName" data-throw-if-not-resolved="false"></xref>
+  example: []
+  syntax:
+    content: public string? CommonName { get; internal set; }
+    parameters: []
+    return:
+      type: System.String
+    content.vb: Public Property CommonName As String
+  overload: DataLayer.HorizontalObjects.HorizontalMessierObject.CommonName*
 references:
 - uid: DataLayer.HorizontalObjects
   commentId: N:DataLayer.HorizontalObjects
@@ -744,3 +776,15 @@ references:
   name: ViewingDifficulty
   nameWithType: HorizontalMessierObject.ViewingDifficulty
   fullName: DataLayer.HorizontalObjects.HorizontalMessierObject.ViewingDifficulty
+- uid: DataLayer.EquatorialObjects.EquatorialMessierObject.CommonName
+  commentId: P:DataLayer.EquatorialObjects.EquatorialMessierObject.CommonName
+  href: DataLayer.EquatorialObjects.EquatorialMessierObject.html#DataLayer_EquatorialObjects_EquatorialMessierObject_CommonName
+  name: CommonName
+  nameWithType: EquatorialMessierObject.CommonName
+  fullName: DataLayer.EquatorialObjects.EquatorialMessierObject.CommonName
+- uid: DataLayer.HorizontalObjects.HorizontalMessierObject.CommonName*
+  commentId: Overload:DataLayer.HorizontalObjects.HorizontalMessierObject.CommonName
+  href: DataLayer.HorizontalObjects.HorizontalMessierObject.html#DataLayer_HorizontalObjects_HorizontalMessierObject_CommonName
+  name: CommonName
+  nameWithType: HorizontalMessierObject.CommonName
+  fullName: DataLayer.HorizontalObjects.HorizontalMessierObject.CommonName
