--- a/Docs/api/Stargazer.AzimuthGridlines.yml
+++ b/Docs/api/Stargazer.AzimuthGridlines.yml
@@ -37,8 +37,8 @@ items:
   type: Class
   source:
     id: AzimuthGridlines
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptMethodsGenerator\Stargazer.AzimuthGridlines_ScriptMethods.generated.cs
-    startLine: 5
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPathAttributeGenerator\Stargazer.AzimuthGridlines_ScriptPath.generated.cs
+    startLine: 3
   assemblies:
   - New Game Project
   namespace: Stargazer
