--- a/Docs/api/Stargazer.CompassNeedle.yml
+++ b/Docs/api/Stargazer.CompassNeedle.yml
@@ -17,8 +17,8 @@ items:
   type: Class
   source:
     id: CompassNeedle
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPathAttributeGenerator\Stargazer.CompassNeedle_ScriptPath.generated.cs
-    startLine: 3
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptMethodsGenerator\Stargazer.CompassNeedle_ScriptMethods.generated.cs
+    startLine: 5
   assemblies:
   - New Game Project
   namespace: Stargazer
