--- a/Docs/api/Stargazer.GridLabel.yml
+++ b/Docs/api/Stargazer.GridLabel.yml
@@ -23,8 +23,8 @@ items:
   type: Class
   source:
     id: GridLabel
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPathAttributeGenerator\Stargazer.GridLabel_ScriptPath.generated.cs
-    startLine: 3
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPropertyDefValGenerator\Stargazer.GridLabel_ScriptPropertyDefVal.generated.cs
+    startLine: 2
   assemblies:
   - New Game Project
   namespace: Stargazer
