--- a/Docs/api/Stargazer.Spawner2D.yml
+++ b/Docs/api/Stargazer.Spawner2D.yml
@@ -23,8 +23,8 @@ items:
   type: Class
   source:
     id: Spawner2D
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptSerializationGenerator\Stargazer.Spawner2D_ScriptSerialization.generated.cs
-    startLine: 5
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPathAttributeGenerator\Stargazer.Spawner2D_ScriptPath.generated.cs
+    startLine: 3
   assemblies:
   - New Game Project
   namespace: Stargazer
