--- a/Docs/api/Stargazer.Sun.yml
+++ b/Docs/api/Stargazer.Sun.yml
@@ -19,8 +19,8 @@ items:
   type: Class
   source:
     id: Sun
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptSerializationGenerator\Stargazer.Sun_ScriptSerialization.generated.cs
-    startLine: 5
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPropertyDefValGenerator\Stargazer.Sun_ScriptPropertyDefVal.generated.cs
+    startLine: 2
   assemblies:
   - New Game Project
   namespace: Stargazer
