--- a/Docs/api/Stargazer.HoverLabel.yml
+++ b/Docs/api/Stargazer.HoverLabel.yml
@@ -19,8 +19,8 @@ items:
   type: Class
   source:
     id: HoverLabel
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptSignalsGenerator\Stargazer.HoverLabel_ScriptSignals.generated.cs
-    startLine: 5
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptPropertyDefValGenerator\Stargazer.HoverLabel_ScriptPropertyDefVal.generated.cs
+    startLine: 2
   assemblies:
   - New Game Project
   namespace: Stargazer
