--- a/Docs/api/Stargazer.Star.yml
+++ b/Docs/api/Stargazer.Star.yml
@@ -24,7 +24,7 @@ items:
   type: Class
   source:
     id: Star
-    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptSerializationGenerator\Stargazer.Star_ScriptSerialization.generated.cs
+    path: Godot.SourceGenerators\Godot.SourceGenerators.ScriptMethodsGenerator\Stargazer.Star_ScriptMethods.generated.cs
     startLine: 5
   assemblies:
   - New Game Project
